fixes gap of transactions

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1997,7 +1997,7 @@ aside.explore {
 #transactions {
   .lower-content {
     @media screen and (max-width: 768px) {
-      padding-top: 110px !important;
+      padding-top: 100px !important;
     }
   }
 
